[project]
name = "network-vis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "dnspython>=2.7",
  "cryptography>=43",
  "httpx[http2]>=0.27",
  "certifi>=2024.2.2",
  "truststore>=0.9",
]

[dependency-groups]
dev = [
  "pytest>=8",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
